integration_tests/src/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_oracle_external_plugin_on_collection.snap
---
source: integration_tests/src/mpl_core_tests.rs
assertion_line: 331
expression: response
snapshot_kind: text
---
{
  "interface": "MplCoreCollection",
  "id": "Hvdg2FjMEndC4jxF2MJgKCaj5omLLZ19LNfD4p9oXkpE",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/collection",
    "files": [],
    "metadata": {
      "name": "Test Collection",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "lamports": 2067120,
  "executable": false,
  "rent_epoch": 18446744073709551615,
  "plugins": {},
  "mpl_core_info": {
    "num_minted": 0,
    "current_size": 0,
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "type": "Oracle",
      "index": 0,
      "offset": 103,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "lifecycle_checks": {
        "burn": [
          "CanReject"
        ]
      },
      "adapter_config": {
        "base_address_config": null,
        "base_address": "4iV6bzDfTrpvfeovNwwKFkdLneb5GWSLv8nz7F3mdHfG",
        "results_offset": "Anchor"
      }
    }
  ]
}
