integration_tests/src/snapshots/integration_tests__mpl_core_tests__mpl_core_get_collection_with_linked_app_data_with_json_data_and_owner_is_data_authority.snap
---
source: integration_tests/src/mpl_core_tests.rs
assertion_line: 809
expression: response
snapshot_kind: text
---
{
  "interface": "MplCoreCollection",
  "id": "2aUn89GKuSjfYTeCH6GL1Y6CiUYqjvcgZehFGDJbhNeW",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/collection",
    "files": [],
    "metadata": {
      "name": "Test Collection",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "lamports": 1781760,
  "executable": false,
  "rent_epoch": 18446744073709551615,
  "plugins": {},
  "mpl_core_info": {
    "num_minted": 1,
    "current_size": 1,
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "type": "LinkedAppData",
      "index": 0,
      "offset": 103,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "adapter_config": {
        "data_authority": {
          "type": "Owner",
          "address": null
        },
        "schema": "Json"
      }
    }
  ]
}
